Fixed gradient background white space on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -10,7 +10,17 @@ html,
 
 body {
   margin: 0px;
-  //min-height: 100%;
   width: 100%;
-  background: linear-gradient(0deg, rgba(43, 0, 52, 1) 23%, rgba(15, 0, 52, 1) 90%) fixed;
+}
+
+#gs-background {
+  background-color: rgba(43, 0, 52, 1);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-image: linear-gradient(0deg, rgba(43, 0, 52, 1) 23%, rgba(15, 0, 52, 1) 90%);
+  background-size: cover;
+  z-index: -100;
 }
